# customer-research

./: .gitignore  README.md  pyproject.toml
packaging/switchgear_enterprise_insight_windows/: README_release.md  README_发布说明.md  start.py  start_lan.bat  start_powershell.ps1  start_powershell_lan.ps1  start_windows.bat  启动项目.bat  启动项目.ps1  启动项目_局域网共享.bat
scripts/: generate_official_fallback_reports.py  generate_xinjiang_county_city_pack.py
src/city_industry_research/: __init__.py  __main__.py  blueprint.py  cli.py  ingest.py  official_discovery.py  report_writer.py  schemas.py  source_discovery.py  webapp.py
src/city_industry_research/static/: app.css  app.js  index.html
src/switchgear_customer_insight/: __init__.py  __main__.py  citations.py  cli.py  docx_writer.py  framework.py  petrochem_ka_data.py  report_writer.py  webapp.py
src/switchgear_customer_insight/data/source_registry/: chint.md  tianyu.md  zhonghuan.md
src/switchgear_customer_insight/static/: app.css  app.js  index.html
tests/: test_blueprint.py  test_ingest.py  test_official_discovery.py  test_report_writer.py  test_switchgear_customer_insight.py  test_webapp.py
